# meteoinfo-cli-scrapper

./: .gitignore  .rustfmt.toml  Cargo.toml
crates/meif_client/: Cargo.toml
crates/meif_client/src/: main.rs
crates/meif_client_android/: Cargo.toml
crates/meif_client_android/src/: lib.rs
crates/meif_client_desktop/: Cargo.toml
crates/meif_client_gui/: Cargo.toml
crates/meif_client_gui/src/: main.rs  ui.rs
crates/meif_client_ui_shared/: Cargo.toml  build.rs
crates/meif_client_ui_shared/ui/: captions.slint  image_section.slint  main-window.slint  styles.slint
crates/meif_grub/: Cargo.toml  README.md
crates/meif_grub/src/: config.rs  env.rs  main.rs
crates/meif_lib/: Cargo.toml
crates/meif_lib/src/: consts.rs  lib.rs
docs/: features.md  project.drawio  todo.md
meif_client/: Cargo.toml
meif_client/src/: main.rs
meif_client_gui/: Cargo.toml
meif_client_gui/src/: main.rs
