[package]
name = "meif_client"
version = "0.1.0"
edition = "2024"

[dependencies]
meif_lib = { path = "../meif_lib"}
log = "0.4.27"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_xml = "0.9.1"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
ureq = "3.0.11"
